--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,12 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.6.3</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        </dependencies>
 
     <build>
         <plugins>
@@ -64,5 +69,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
